one filename is wrong so i changed it

--- a/JNotebooks/Preprocessing/Data_annotations.ipynb
+++ b/JNotebooks/Preprocessing/Data_annotations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "[126 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,137 @@
     "path = '../../data/' + filename\n",
     "\n",
     "ICBHI_sounds_annotations = pd.read_csv(path, sep = '\\t', header = None, names=['filename', 'train_test'])\n",
-    "ICBHI_sounds_annotations['id'] = ICBHI_sounds_annotations.filename.str[:3].astype(int)"
+    "ICBHI_sounds_annotations['id'] = ICBHI_sounds_annotations.filename.str[:3].astype(int)\n",
+    "ICBHI_sounds_annotations.loc[919,'filename'] = '226_1b1_Pl_sc_LittC2SE'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>train_test</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101_1b1_Al_sc_Meditron</td>\n",
+       "      <td>test</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>101_1b1_Pr_sc_Meditron</td>\n",
+       "      <td>test</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>102_1b1_Ar_sc_Meditron</td>\n",
+       "      <td>test</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>103_2b2_Ar_mc_LittC2SE</td>\n",
+       "      <td>train</td>\n",
+       "      <td>103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>104_1b1_Al_sc_Litt3200</td>\n",
+       "      <td>test</td>\n",
+       "      <td>104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>915</th>\n",
+       "      <td>224_1b2_Al_sc_Meditron</td>\n",
+       "      <td>test</td>\n",
+       "      <td>224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916</th>\n",
+       "      <td>225_1b1_Pl_sc_Meditron</td>\n",
+       "      <td>test</td>\n",
+       "      <td>225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>917</th>\n",
+       "      <td>226_1b1_Al_sc_Meditron</td>\n",
+       "      <td>train</td>\n",
+       "      <td>226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>918</th>\n",
+       "      <td>226_1b1_Ll_sc_Meditron</td>\n",
+       "      <td>train</td>\n",
+       "      <td>226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>919</th>\n",
+       "      <td>226_1b1_Pl_sc_LittC2SE</td>\n",
+       "      <td>train</td>\n",
+       "      <td>226</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>920 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   filename train_test   id\n",
+       "0    101_1b1_Al_sc_Meditron       test  101\n",
+       "1    101_1b1_Pr_sc_Meditron       test  101\n",
+       "2    102_1b1_Ar_sc_Meditron       test  102\n",
+       "3    103_2b2_Ar_mc_LittC2SE      train  103\n",
+       "4    104_1b1_Al_sc_Litt3200       test  104\n",
+       "..                      ...        ...  ...\n",
+       "915  224_1b2_Al_sc_Meditron       test  224\n",
+       "916  225_1b1_Pl_sc_Meditron       test  225\n",
+       "917  226_1b1_Al_sc_Meditron      train  226\n",
+       "918  226_1b1_Ll_sc_Meditron      train  226\n",
+       "919  226_1b1_Pl_sc_LittC2SE      train  226\n",
+       "\n",
+       "[920 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ICBHI_sounds_annotations"
    ]
   },
   {
