import sys to load functions from script folder

--- a/JNotebooks/Preprocessing/logMel_norm.ipynb
+++ b/JNotebooks/Preprocessing/logMel_norm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,21 +17,25 @@
     "\n",
     "import librosa\n",
     "import librosa.display\n",
+    "\n",
+    "# import functions from scripts directory\n",
+    "import sys\n",
+    "sys.path.insert(1, '../../scripts/') # caution: path[0] is reserved for script path (or '' in REPL)\n",
     "from read_wav import _read_wav_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x289c5d2e0>]"
+       "[<matplotlib.lines.Line2D at 0x16b2cd880>]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -53,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,21 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'absolute'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [135], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[39mreturn\u001b[39;00m mel_dB\n\u001b[1;32m     10\u001b[0m mel_dB \u001b[39m=\u001b[39m mel_log(vec, tar_sr)\n\u001b[0;32m---> 11\u001b[0m mel_dB\u001b[39m.\u001b[39;49mabsolute()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'absolute'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# input tar_sr, vec, fmax: tar_sr/2, \n",
     "# passing through arguments to the Mel filters\n",
@@ -95,24 +87,43 @@
     "    return mel_dB\n",
     "    \n",
     "mel_dB = mel_log(vec, tar_sr)\n",
-    "mel_dB.absolute()\n"
+    "# mel_dB.absolute()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [129], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m         V \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros_like(array, dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39muint8)\n\u001b[1;32m     18\u001b[0m mel_dB_rgb \u001b[39m=\u001b[39m array2D_to_rgb(mel_dB)\n\u001b[0;32m---> 19\u001b[0m mel_dB_rgb\u001b[39m.\u001b[39;49mshape\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
-     ]
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zscore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 3, 157)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -133,21 +144,22 @@
     "    else:\n",
     "        V = np.zeros_like(array, dtype=np.uint8)\n",
     "\n",
+    "    return V\n",
+    "\n",
     "mel_dB_rgb = array2D_to_rgb(mel_dB)\n",
     "\n",
-    "mel_dB_rgb.shape\n"
+    "mel_dB_rgb.shape\n",
+    "\n",
+    "# from scipy import stats\n",
+    "# mel_db_rgb_norm = stats.zscore(mel_dB_rgb, axis=1)\n",
+    "\n",
+    "# mel_db_rgb_norm\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -182,16 +194,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from scipy import stats\n",
-    "# mel_db_norm = stats.zscore(mel_dB, axis=1)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -200,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +285,7 @@
        "[Text(0.5, 1.0, 'Mel-frequency spectrogram')]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -307,13 +309,6 @@
     "fig.colorbar(img, ax=ax, format='%+2.0f dB')\n",
     "ax.set(title='Mel-frequency spectrogram')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
