folder structure updated: add class folder, health_0/1

--- a/JNotebooks/Preprocessing/save_img.ipynb
+++ b/JNotebooks/Preprocessing/save_img.ipynb
@@ -31,23 +31,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The directory already exists\n"
-     ]
-    }
-   ],
-   "source": [
-    "mk_dir()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -85,6 +68,8 @@
    ],
    "source": [
     "y, anno_chunk = audio_preprocessing(anno)\n",
+    "\n",
+    "mk_dir()\n",
     "save_png(y,anno_chunk)\n"
    ]
   }
