--- a/Client_side_app/web/pseudocode.ipynb
+++ b/Client_side_app/web/pseudocode.ipynb
@@ -3,19 +3,81 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "html"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.core.display import HTML"
+    "from IPython.core.display import HTML\n",
+    "from IPython.display import Javascript"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "require.config(\n    {paths: {d3:'https://d3js.org/d3.v5.min'}}\n)\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "require.config(\n",
+    "    {paths: {d3:'https://d3js.org/d3.v5.min'}}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "require([d3], function(d3) {alert(d3);});\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "require([d3], function(d3) {alert(d3);});"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "element.text('hi')\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "element.text('hi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -27,7 +89,7 @@
       "text/html": [
        "<style>\n",
        "// p {font-size:100px;}\n",
-       "\n",
+       "button {background-color:blueviolet; color:aqua;}\n",
        "</style>\n"
       ],
       "text/plain": [
@@ -42,7 +104,7 @@
     "%%html\n",
     "<style>\n",
     "// p {font-size:100px;}\n",
-    "\n",
+    "button {background-color:blueviolet; color:aqua;}\n",
     "</style>"
    ]
   },
@@ -55,32 +117,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "html"
-    }
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "\n",
        "<h1>Wellcome to the respiratory classification</h1>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "HTML(\"\"\"\n",
-    "<h1>Wellcome to the respiratory classification</h1>\n",
-    "\"\"\")"
+    "%%html\n",
+    "<h1>Wellcome to the respiratory classification</h1>"
    ]
   },
   {
@@ -126,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -136,33 +191,42 @@
     {
      "data": {
       "text/html": [
-       "<button onclick=\"getElementsByTagName('button')[0].style.background='red';\">START RECORDING</button>\n"
+       "\n",
+       "<button id=\"but\">START RECORDING</button>\n",
+       "<script type=\"text/javascript\">\n",
+       "element.append('<div>Hello</div>');   \n",
+       "</script>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
+     "execution_count": 59,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%html\n",
-    "<button onclick=\"getElementsByTagName('button')[0].style.background='red';\">START RECORDING</button>"
+    "HTML('''\n",
+    "<button id=\"but\">START RECORDING</button>\n",
+    "<script type=\"text/javascript\">\n",
+    "element.append('<div>Hello</div>');   \n",
+    "</script>\n",
+    "''')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "metadata": {
     "vscode": {
-     "languageId": "javascript"
+     "languageId": "html"
     }
    },
    "outputs": [
     {
      "data": {
-      "application/javascript": "getElementsByTagName('button')[0].style.background='red';\nalert(1);\n",
+      "application/javascript": "element.get(5).text('<div>Hello</div>');\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -173,8 +237,30 @@
    ],
    "source": [
     "%%javascript\n",
-    "getElementsByTagName('button')[0].style.background='red';\n",
-    "alert(1);"
+    "element.get(5).text('<div>Hello</div>');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "\nalert(\"hi\");\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Javascript(\"\"\"\n",
+    "alert(\"hi\");\n",
+    "\"\"\")"
    ]
   },
   {
