--- a/Client_side_app/web/purecode.ipynb
+++ b/Client_side_app/web/purecode.ipynb
@@ -197,7 +197,7 @@
     "\t100% { background:conic-gradient(red 0deg, red 337.5deg, yellow 337.5deg); }\n",
     "}\n",
     "@keyframes breath2 {\n",
-    "\t0 { background:darkblue; color:white; font-size:80%; padding:2.5em 0.6em; }\n",
+    "\t0% { background:darkblue; color:white; font-size:80%; padding:2.5em 0.6em; }\n",
     "\t25.00% { background:darkblue; color:white; font-size:80%; padding:2.5em 0.6em; }\n",
     "\t25.00% { background:lightblue; color:black; font-size:100%; padding:3em 0.6em; }\n",
     "\t50.00% { background:lightblue; color:black; font-size:100%; padding:3em 0.6em; }\n",
@@ -208,7 +208,7 @@
     "\t100.00% { background:darkblue; color:white; font-size:80%; padding:2.5em 0.6em; }\n",
     "}\n",
     "@keyframes breath3 {\n",
-    "\t0 { content:'BREATH OUT'; } 25.00% { content:'BREATH OUT'; } 25.00% { content:'BREATH IN'; }\n",
+    "\t0% { content:'BREATH OUT'; } 25.00% { content:'BREATH OUT'; } 25.00% { content:'BREATH IN'; }\n",
     "\t50.00% { content:'BREATH IN'; } 50.00% { content:'BREATH OUT'; } 75.00% { content:'BREATH OUT'; }\n",
     "\t75.00% { content:'BREATH IN'; } 100.00% { content:'BREATH IN'; } 100.00% { content:'BREATH OUT'; }\n",
     "}\n",
@@ -356,7 +356,7 @@
     "```\n",
     "navigator.mediaDevices.getUserMedia({audio:true})\n",
     ".then(stream => { handlerF(stream); })\n",
-    ".catch((err) => { alert(err.name \\nerr.message); });\n",
+    ".catch((err) => { alert(err.name + '\\n' + err.message); });\n",
     "```\n",
     "Line 1: Asks for audio permission.<br>\n",
     "Line 2: If everything is fine, a function handles the stream.<br>\n",
@@ -428,12 +428,14 @@
     "    var res = possibleR[Math.floor(Math.random()*4)];\n",
     "    document.getElementsByTagName('p')[0].innerHTML = 'Thank you. Your respiration sounds ' + res + '. You now can optionally download a copy of the record. For more accurate results, we recommend [link by Louis]';\n",
     "    document.getElementById('two1').remove();\n",
+    "    var b = document.createElement('a'); b.href = a.src; b.target = '_blank'; b.download = 'LungSound.wav';\tdocument.body.appendChild(b); b.click(); b.remove();\n",
     "}\n",
     "````\n",
     "Line 1 (inside the function): Stop recording.<br>\n",
     "Lines 2: These line will be replaced by the result of the neural network. A random generator is the current placeholder. This is for demo purposes and for fun, as true random guessing is much better (i.e. the pertest probability of having a healthy lung is higher than 25%).<br>\n",
     "Line 3: Put the result in friendly text and make recommendations for a repetition with better quality (right amount of info at th right time).<br>\n",
-    "Line 4: Remove the button"
+    "Line 4: Remove the button.<br>\n",
+    "Line 5 and 6: Offer the option to download a copy."
    ]
   }
  ],
