--- a/ResNet50_Transfer_Learning.ipynb
+++ b/ResNet50_Transfer_Learning.ipynb
@@ -160,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rescale = tf.keras.layers.Rescaling(1./127.5, offset=-1)"
+    "preprocess_input = tf.keras.applications.resnet_v2.preprocess_input"
    ]
   },
   {
@@ -815,13 +815,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "inputs = tf.keras.Input(shape=(IMG_SHAPE))\n",
     "x = data_augmentation(inputs)\n",
-    "x = rescale(x)\n",
+    "x = preprocess_input(x)\n",
     "x = base_model(x, training=False)\n",
     "x = global_average_layer(x)\n",
     "x = tf.keras.layers.Dropout(0.2)(x)\n",
