resize and store pkl saved as a function

--- a/JNotebooks/Model/svm_model.ipynb
+++ b/JNotebooks/Model/svm_model.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,73 +49,17 @@
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
+    "import sys\n",
+    "sys.path.insert(1, '../../scripts/')\n",
+    "\n",
+    "from resize_pkl import resize_all\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Function for resize the images and export to pkl file"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def resize_all(src, pklname, include, width=150, height=None):\n",
-    "    \"\"\"\n",
-    "    load images from path, resize them and write them as arrays to a dictionary, \n",
-    "    together with labels and metadata. The dictionary is written to a pickle file \n",
-    "    named '{pklname}_{width}x{height}px.pkl'.\n",
-    "     \n",
-    "    Parameter\n",
-    "    ---------\n",
-    "    src: str\n",
-    "        path to data\n",
-    "    pklname: str\n",
-    "        path to output file\n",
-    "    width: int\n",
-    "        target width of the image in pixels\n",
-    "    include: set[str]\n",
-    "        set containing str\n",
-    "    \"\"\"\n",
-    "     \n",
-    "    height = height if height is not None else width\n",
-    "     \n",
-    "    data = dict()\n",
-    "    data['description'] = 'resized ({0}x{1})animal images in rgb'.format(int(width), int(height))\n",
-    "    data['label'] = []\n",
-    "    data['filename'] = []\n",
-    "    data['data'] = []   \n",
-    "     \n",
-    "    pklname = f\"{pklname}_{width}x{height}px.pkl\"\n",
-    " \n",
-    "    # read all images in PATH, resize and write to DESTINATION_PATH\n",
-    "    for subdir in os.listdir(src):\n",
-    "        if subdir in include:\n",
-    "            print(subdir)\n",
-    "            current_path = os.path.join(src, subdir)\n",
-    " \n",
-    "            for file in tqdm(os.listdir(current_path)):\n",
-    "                if file[-3:] in {'jpg', 'png'}:\n",
-    "                    img = Image.open(os.path.join(current_path, file))\n",
-    "                    img_rgb = img.convert('RGB') # convert to RGB\n",
-    "\n",
-    "                    im = np.asarray(img_rgb)\n",
-    "                    im = resize(im, (width, height)) #[:,:,::-1]\n",
-    "                    data['label'].append(subdir[-1])\n",
-    "                    data['filename'].append(file)\n",
-    "                    data['data'].append(im)\n",
-    " \n",
-    "        joblib.dump(data, pklname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +105,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 324/324 [00:07<00:00, 42.45it/s]\n"
+      "100%|██████████| 324/324 [00:07<00:00, 42.81it/s]\n"
      ]
     },
     {
@@ -175,7 +119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 674/674 [00:15<00:00, 43.37it/s]\n"
+      "100%|██████████| 674/674 [00:15<00:00, 43.11it/s]\n"
      ]
     }
    ],
@@ -183,7 +127,7 @@
     "base_name_val = 'spectrogram_val'\n",
     "train_dir = cwd_path.split(repo_name, 1)[0]+repo_name+\"/data/images/90-10_split/val\"\n",
     "\n",
-    "# resize_all(src=train_dir,pklname=base_name_val, width=width, include=src)"
+    "resize_all(src=train_dir,pklname=base_name_val, width=width, include=src)"
    ]
   },
   {
