--- a/JNotebooks/Model/svm_model.ipynb
+++ b/JNotebooks/Model/svm_model.ipynb
@@ -19,9 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'BaseEstimator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [8], line 35\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msys\u001b[39;00m\n\u001b[1;32m     33\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39minsert(\u001b[39m1\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m../../scripts/\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> 35\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msvm_functions\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     36\u001b[0m \u001b[39m# import resize_all, RGB2GrayTransformer\u001b[39;00m\n\u001b[1;32m     39\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mmatplotlib\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39minline\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m~/neuefische/Respiratory_Disease_Classification/JNotebooks/Model/../../scripts/svm_functions.py:61\u001b[0m\n\u001b[1;32m     55\u001b[0m         joblib\u001b[39m.\u001b[39mdump(data, pklname)\n\u001b[1;32m     59\u001b[0m \u001b[39m# RGB2Gray\u001b[39;00m\n\u001b[0;32m---> 61\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mRGB2GrayTransformer\u001b[39;00m(BaseEstimator, TransformerMixin):\n\u001b[1;32m     62\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     63\u001b[0m \u001b[39m    Convert an array of RGB images to grayscale\u001b[39;00m\n\u001b[1;32m     64\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m     66\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'BaseEstimator' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os\n",
@@ -57,7 +70,8 @@
     "import sys\n",
     "sys.path.insert(1, '../../scripts/')\n",
     "\n",
-    "from resize_pkl import resize_all\n",
+    "from svm_functions import resize_all, RGB2GrayTransformer, HogTransformer\n",
+    "\n",
     "\n",
     "%matplotlib inline"
    ]
