--- a/JNotebooks/Model/svm_model.ipynb
+++ b/JNotebooks/Model/svm_model.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,13 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "repo_name = 'Respiratory_Disease_Classification'\n",
     "cwd_path = os.getcwd()\n",
-    "train_dir = cwd_path.split(repo_name, 1)[0]+repo_name+\"/data/images/90-10_split/train\"\n",
     "src = os.listdir(train_dir)[1:]"
    ]
   },
@@ -85,37 +84,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "health_0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1904/1904 [00:45<00:00, 41.90it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "base_name_train = 'spectrogram_train'\n",
     "width = 80\n",
     "include = src\n",
+    "train_dir = cwd_path.split(repo_name, 1)[0]+repo_name+\"/data/images/90-10_split_new/cls_2/train\"\n",
     "\n",
-    "# resize_all(src=train_dir,pklname=base_name, width=width, include=src)"
+    "resize_all(src=train_dir,pklname=base_name_train, width=width, include=src)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "health_0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 606/606 [00:14<00:00, 40.64it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "base_name_val = 'spectrogram_val'\n",
-    "train_dir = cwd_path.split(repo_name, 1)[0]+repo_name+\"/data/images/90-10_split/val\"\n",
+    "val_dir = cwd_path.split(repo_name, 1)[0]+repo_name+\"/data/images/90-10_split_new/cls_2/val\"\n",
     "\n",
-    "# resize_all(src=train_dir,pklname=base_name_val, width=width, include=src)"
+    "resize_all(src=val_dir,pklname=base_name_val, width=width, include=src)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_name_test = 'spectrogram_test'\n",
-    "train_dir = cwd_path.split(repo_name, 1)[0]+repo_name+\"/data/images/90-10_split/test\"\n",
+    "test_dir = cwd_path.split(repo_name, 1)[0]+repo_name+\"/data/images/90-10_split_new/cls_2/train\"\n",
     "\n",
     "# resize_all(src=train_dir,pklname=base_name_test, width=width, include=src)"
    ]
